# deployment_model_inference

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
models/: trained_model_2025-01-02.joblib
src/: data_preprocessor.py  inference.py  model_loader.py
