[tool.poetry]
package-mode = false
name = "deployment-model-inference"
version = "0.1.0"
description = "Inference pipeline for deployment of the demo with pima indians dataset"
authors = ["iair <i.linker8@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^2.2.3"
scikit-learn = "^1.6.0"
xgboost = "^2.1.3"
joblib = "^1.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"